# agenticanalytics

./: .gitignore  .taskmasterconfig  README.md
server/: .gitignore  Dockerfile  config.py  db.py  db_models.py  logger.py  main.py  pyproject.toml  run_migration.py
server/agents/: __init__.py  agent.py  runner.py  schema.py
server/agents/code_scan/: agent.prompt.yaml  agent.py
server/agents/code_scan/ingestion/: config.py  rag_corpus.py
server/agents/code_scan/tools/: __init__.py  add_corpus.py  clone_repo.py  compress_repo.py  list_files.py  rag_query.py  utils.py
server/agents/shared/: analyze_tracking.py  tools.py
server/agents/sub_agents/: __init__.py
server/code_scan/: __init__.py  agent.prompt.yaml  agent.py  agent_compression.prompt.yaml
server/code_scan/retrieval/: semantic_search_engine.py
server/code_scan/tools/: __init__.py  define_pattern.py  repomix.config.json
server/dba/: agent.py
server/migrations/: 250722_create_many_to_many_relationships.sql  README.md  create_many_to_many_relationships.sql
server/rag/: agent.py  prompts.py
server/rag/ingestion/: config.py  rag_corpus.py
server/rag/retrieval/: semantic_search_engine.py
server/rag/tools/: __init__.py  add_corpus.py  clone_repo.py  define_pattern.py  list_files.py  rag_query.py  utils.py
server/repo-reader/: agent-compression.prompt.yaml  agent.py
server/repo_reader/: agent.py  runner.py
server/routers/: agent.py  auth.py  deps.py  events.py  github.py  plans.py  repo.py
server/tests/: conftest.py  test_api.py  test_models.py
server/utils/: db_session.py  github.py
(+84 files in other folders)
